# idf-extra-components

./: .gitignore  .gitmodules
.sisyphus/plans/: nand-fault-sim-impl.md
dhara/: CMakeLists.txt  DHARA_DEEP_DIVE.md  Kconfig  README.md  idf_component.yml  sbom_dhara.yml
dhara/dhara/dhara/: error.c  error.h  journal.c  journal.h  map.c  map.h  nand.h
dhara/dhara/tests/: nand.c  sim.c
dhara/docs/: brainstorm-trace-path-metadata-cache.md
dhara/docs/plans/: 2026-04-14-dhara-oob-lpn-replay.md  2026-04-29-configurable-radix-depth.md
nvblock/: CMakeLists.txt  README.md  idf_component.yml  sbom_nvblock.yml
spi_nand_flash/: .gitignore  2026-03-18-dhara-bbal-design.md  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  dhara-bbal-design.md  fault-sim-ftl-eval-improvements.md  idf_component.yml
spi_nand_flash/.opencode/skills/spi-nand-nvblock-context/: SKILL.md
spi_nand_flash/.sisyphus/: ftl-eval-app-design.md
spi_nand_flash/docs/: ecc-page-relief.md  ftl-eval-and-fault-sim-deep-dive.md
spi_nand_flash/docs/plans/: 2026-03-31-linux-wear-simulation-demo.md  2026-04-09-dhara-vendored-single-library.md  2026-05-05-gc-reserve-percent.md
spi_nand_flash/docs/specs/: nvblock-integration.md
spi_nand_flash/examples/linux_wear_simulation/: CMakeLists.txt
spi_nand_flash/examples/linux_wear_simulation/main/: CMakeLists.txt  main.c
spi_nand_flash/ftl_eval/: CMakeLists.txt  Makefile  README.md  ftl_viz.py  relief_noise_vs_waf.json  relief_onset_matrix.json  relief_vs_gini.json  sdkconfig.defaults  sweep.json  waf_vs_gc_vs_lifetime.json  waf_vs_write_size_2048.json  waf_vs_write_size_4096.json  zipf_skew_0.5.json  zipf_skew_1.5.json  zipf_skew_2.0.json
spi_nand_flash/ftl_eval/configs/: ecc_noise_bump.json  gc_vs_wear_heatmap.json  gc_vs_wear_monotonic.json  gc_vs_wear_random.json  gc_vs_wear_random_monotonic.json  gc_vs_wear_sequential.json  gc_vs_wear_sequential_monotonic.json  noise_vs_gc.json  page_relief.json  page_relief_heatmap.json  waf_vs_write_size_512.json  zipf_skew_0.0.json  zipf_skew_1.0.json
spi_nand_flash/ftl_eval/main/: CMakeLists.txt  api_contract_test.c  idf_component.yml  main.c
spi_nand_flash/ftl_eval/main/config/: app_config.c  app_config.h
spi_nand_flash/ftl_eval/main/ftl/: dhara_ftl.c  ftl.c  ftl.h  ftl_ops.h
spi_nand_flash/ftl_eval/main/metrics/: metrics.c  metrics.h
spi_nand_flash/ftl_eval/main/reporter/: reporter.h  reporter_json.c
spi_nand_flash/ftl_eval/main/runner/: runner.c  runner.h
spi_nand_flash/ftl_eval/main/workload/: workload.c  workload.h  workload_mixed.c  workload_random.c  workload_read_loop.c  workload_sequential.c  workload_zipf.c
spi_nand_flash/ftl_eval/test/: CMakeLists.txt  dhara_ftl.cpp  ftl_interface.hpp  test_app_config.cpp  test_fault_sim.cpp  test_ftl_robustness.cpp  test_main.cpp  test_page_relief.cpp
spi_nand_flash/host_test/: sdkconfig.bdl  sdkconfig.bdl.caches  sdkconfig.defaults.no-bdl  sdkconfig.fault_sim  sdkconfig.nvblock  sdkconfig.nvblock.bdl
spi_nand_flash/host_test/main/: CMakeLists.txt  app_config_test_shim.c  dhara_ftl.cpp  ftl_interface.hpp  idf_component.yml  nand_fault_sim.c  nand_fault_sim.h  test_advanced_init.cpp  test_advanced_types.cpp  test_app_config.cpp  test_backward_compat.cpp  test_ecc_relief.cpp  test_fault_sim.cpp  test_ftl_robustness.cpp  test_hash_table.cpp  test_integration.cpp  test_nand_flash.cpp  test_nand_flash_bdl.cpp  test_nand_flash_ftl.cpp  test_page_relief.cpp  test_sparse_hash_backend.cpp
spi_nand_flash/include/: dhara_bbal.h  nand_emul_advanced.h  nand_fault_sim.h  nand_linux_mmap_emul.h  spi_nand_flash.h
spi_nand_flash/include/backends/: hash_table.h
spi_nand_flash/include/nand_private/: nand_impl_wrap.h
spi_nand_flash/openspec/changes/adaptive-ecc-skip/: design.md  proposal.md  tasks.md
spi_nand_flash/openspec/changes/advanced-flash-tracking/: design.md  proposal.md  tasks.md
spi_nand_flash/perf_app/: .gitignore  CMakeLists.txt  README.md  perf_inventory.py  perf_viz.py  run_perf.py  sdkconfig.defaults
spi_nand_flash/perf_app/main/: CMakeLists.txt  idf_component.yml  perf_app_main.c  perf_benchmarks.c  perf_benchmarks.h
spi_nand_flash/priv_include/: ecc_relief_map.h  nand.h  nand_emul_advanced_priv.h  nand_impl.h
spi_nand_flash/src/: dhara_glue.c  nand.c  nand_emul_advanced.c  nand_fault_sim.c  nand_flash_blockdev.c  nand_impl.c  nand_impl_linux.c  nand_impl_wrap.c  nand_linux_mmap_emul.c  nvblock_glue.c
spi_nand_flash/src/backends/: hash_table.c  noop_backend.c  sparse_hash_backend.c
spi_nand_flash/src/failure_models/: noop_failure_model.c  threshold_failure_model.c
spi_nand_flash/test_app/main/: idf_component.yml  test_spi_nand_flash.c
spi_nand_flash_fatfs/examples/nand_flash_perf_app/: README.md
(+30 files in other folders)
